# pagan.expr

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: CMakeLists.txt  evaluate.benchmark.cpp  shunting_yard.benchmark.cpp
cmake/: Config.cmake.in
src/: CMakeLists.txt  evaluate.cpp  evaluate.h  shunting_yard.cpp  shunting_yard.h  token.cpp  token.h
tests/: CMakeLists.txt  evaluate.test.cpp  integration.test.cpp  shunting_yard.test.cpp
